syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "CrudGrpcAspNetCore.Protos";

package Employee;

service EmployeeManage {
  rpc GetAll (google.protobuf.Empty) returns (Employees);
  rpc GetByID (EmployeeFilter) returns (EmployeeModel);
  rpc Insert (EmployeeModel) returns (EmployeeModel);
  rpc Update (EmployeeModel) returns (EmployeeModel);
  rpc Delete (EmployeeFilter) returns (EmployeeModel);
}

message EmployeeModel {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message Employees{
   repeated EmployeeModel items = 1;
}

message EmployeeFilter{
   int32 id = 1;
}